Clean up code, added input box for number of rooms to close

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <div id="solution">
 
         </div>
+        <input id="roomsToClose" type="text">
         <button id="startButton">Go</button>
         <script src="index.js"></script>
     </body>
