Dynamic programming narrow art gallery solution

--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@
                 </tr>
             </table>
         </div>
-        <div id="solution">
-
+        <div id="solution1">
+            <!-- Recursive backtracking solution goes here -->
+        </div>
+        <div id="solution2">
+            <!-- Dynamic programming solution goes here -->
         </div>
         <input id="roomsToClose" type="text">
         <button id="startButton">Go</button>
