Refactoring for readability.

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
             <div id="controls">
                 <div class="text-control">
                     <div>
-                        <label for="numberOfColumns">Total Rooms</label>
-                        <input id="numberOfColumns" type="number" size="3">
+                        <label for="number-of-columns">Gallery Length</label>
+                        <input id="number-of-columns" type="number" size="3" value="8">
                     </div>
                     <div>
-                        <label for="roomsToClose">Rooms to Close</label>
-                        <input id="roomsToClose" type="number">
+                        <label for="rooms-to-close">Rooms to Close</label>
+                        <input id="rooms-to-close" type="number" value="5">
                     </div>
                 </div>
                 <div class="radio-control">
@@ -49,10 +49,10 @@
                     </div>
                 </div>
                 <div class="button-control">
-                    <button id="randomizeButton">Randomize</button>
+                    <button id="randomize-button">Randomize</button>
                 </div>
                 <div class="button-control">
-                    <button id="startButton">Go</button>
+                    <button id="start-button">Go</button>
                 </div>
             </div>
         </div>
