Improved solution styles.

--- a/index.html
+++ b/index.html
@@ -80,11 +80,16 @@
                 </tr>
             </table>
         </div>
-        <div id="recursive-backtracking-solution">
-            <!-- Recursive backtracking solution goes here -->
-        </div>
-        <div id="dynamic-programming-solution">
-            <!-- Dynamic programming solution goes here -->
+        <div id="solution-section">
+            <div id="solution-text">
+                <!-- Solution text goes here -->
+            </div>
+            <div id="loading-spinner" style="display: none">
+                <!-- Loading spinner goes here -->
+            </div>
+            <div id="solution-gallery">
+                <!-- Solution gallery goes here -->
+            </div>
         </div>
         <script src="index.js"></script>
     </body>
