Used webworker to solve narrow art gallery (so that main thread is free).

--- a/index.html
+++ b/index.html
@@ -85,12 +85,16 @@
                 <!-- Solution text goes here -->
             </div>
             <div id="loading-spinner" style="display: none">
-                <!-- Loading spinner goes here -->
+                <div>
+                    <!-- Loading spinner goes here -->
+                </div>
             </div>
             <div id="solution-gallery">
                 <!-- Solution gallery goes here -->
             </div>
         </div>
+        <script src="narrowArtGalleryDynamic.js"></script>
+        <script src="narrowArtGalleryRecursive.js"></script>
         <script src="index.js"></script>
     </body>
 </html>
