Added minimize option for recursive backtracking solution.

--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
                 </div>
                 <div class="radio-control">
                     <div>
-                        <input type="radio" name="goal" id="minimize">
-                        <label for="minimize">Minimize Cost</label>
+                        <input type="radio" name="goal" id="minimize" checked>
+                        <label for="minimize">Minimize</label>
                     </div>
                     <div>
-                        <input type="radio" name="goal" id="maximize" checked>
-                        <label for="maximize">Maximize Value</label>
+                        <input type="radio" name="goal" id="maximize">
+                        <label for="maximize">Maximize</label>
                     </div>
                 </div>
                 <div class="button-control">
