Added link to source code.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <p>
             You are the curator for an art gallery.
             The gallery has two rows of rooms and each room has a value.
+            There is no hallway between the rooms, so visitors must travel from room to room.
             Visitors can enter and exit rooms from the top, bottom, or side (not diagonally), which means that if two adjacent rooms in different rows are closed the visitors cannot pass through.
             You have to close a certain number of rooms without blocking the visitors.
             The goal is the maximize the cost of the closed rooms.
@@ -92,6 +93,9 @@
             <div id="solution-gallery">
                 <!-- Solution gallery goes here -->
             </div>
+        </div>
+        <div class="footer">
+            <a href="https://github.com/Danpythonman/narrow-art-gallery" alt="Source code for this website" target="_blank">Source Code</a>
         </div>
         <script src="narrowArtGalleryDynamic.js"></script>
         <script src="narrowArtGalleryRecursive.js"></script>
